samples/_failures_safe/1761520861_8e2a02_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5240ee44.c: In function ‘main’:
./samples/SAFE/__tmp_5240ee44.c:164:5: error: expected expression at end of input
  164 |     size_t token_count =
      |     ^~~~~~
./samples/SAFE/__tmp_5240ee44.c:164:5: error: expected declaration or statement at end of input
